kubernetes/settings/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: spring-petclinic
  name: "api-ingress"
  annotations: 
    alb.ingress.kubernetes.io/scheme: internet-facing
#    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-3:484497069811:certificate/3a9dd5ff-556f-49b1-a6af-1cdf7b94bb00
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/subnets: subnet-06fcdcf5fca7f545d, subnet-050925e3ff30021a9
    kubernetes.io/ingress.class: alb
  labels:
    app: api-gateway
spec:
  tls:
    - hosts:
      - petclinic.cours-datascientest-mld.cloudns.ph
  ingressClassName: alb
  rules:
     - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: "api-gateway"
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: monitoring
  name: "grafana-ingress"
  annotations: 
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/subnets: subnet-06fcdcf5fca7f545d, subnet-050925e3ff30021a9
    kubernetes.io/ingress.class: alb
  labels:
    app.kubernetes.io/instance: prometheus
    app.kubernetes.io/name: grafana
spec:
  ingressClassName: alb
  rules:
     - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-grafana
                port:
                  number: 80
